--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -188,17 +188,18 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --font-sf: var(--font-sf-pro)
 }
 
 :root {
   --radius: 8px;
-  --background: oklch(0.9818 0.0054 95.1);
-  --foreground: oklch(0.2155 0.0254 284.06);
+  --background: oklch(0.9942 0.021 112.56);
+  --foreground: oklch(0.1776 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.3712 0.0625 207.56);
+  --primary: oklch(0.3018 0.06 231.92);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.5348 0.091286 204.6929);
   --secondary-foreground: oklch(0.205 0 0);
@@ -223,7 +224,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --font-sf: "SF Pro Text";
+  --font-sf-pro: "SF Pro Text";
 }
 
 .dark {
@@ -257,7 +258,7 @@
   --sidebar-accent: oklch(0.269 0 0);
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+  --font-sf-pro: "SF Pro Text";
 }
 
 ::selection {
@@ -267,7 +268,7 @@
 
 @layer base {
   html {
-    font-family: var(--font-serif);
+    font-family: var(--font-sf-pro);
     font-weight: 400;
   }
 
@@ -278,6 +279,11 @@
   h5,
   h6 {
     font-weight: 700;
+  }
+
+  p,
+  label {
+    font-family: var(--font-serif);
   }
 
   * {
