--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,7 +135,8 @@
   --ufont-sf: "SF Pro Text";
   --ufont-serif: "Noto Serif";
   --ufont-instrument-serif: "Instrument Serif";
-  --custom-red: oklch(0.6368 0.2078 25.33);
+  --error-red: oklch(0.5505 0.2155 19.81);
+  --success-green: oklch(0.625 0.1772 140.44);
 }
 
 .dark {
@@ -279,9 +280,9 @@
 }
 
 .toast-error-color * {
-  color: oklch(0.5505 0.2155 19.81) !important;
+  color: var(--error-red) !important;
 }
 
 .toast-success-color * {
-  color: oklch(0.625 0.1772 140.44) !important;
+  color: var(--success-green) !important;
 }
